crates/ruff_python_parser/tests/snapshots/invalid_syntax@ann_assign_stmt_type_alias_annotation.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/ann_assign_stmt_type_alias_annotation.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..37,
        body: [
            AnnAssign(
                StmtAnnAssign {
                    node_index: NodeIndex(None),
                    range: 0..7,
                    target: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 0..1,
                            id: Name("a"),
                            ctx: Store,
                        },
                    ),
                    annotation: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 3..7,
                            id: Name("type"),
                            ctx: Load,
                        },
                    ),
                    value: None,
                    simple: true,
                },
            ),
            Assign(
                StmtAssign {
                    node_index: NodeIndex(None),
                    range: 8..15,
                    targets: [
                        Name(
                            ExprName {
                                node_index: NodeIndex(None),
                                range: 8..9,
                                id: Name("X"),
                                ctx: Store,
                            },
                        ),
                    ],
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 12..15,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 16..28,
                    value: Lambda(
                        ExprLambda {
                            node_index: NodeIndex(None),
                            range: 16..28,
                            parameters: None,
                            returns: None,
                            body: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 24..28,
                                    id: Name("type"),
                                    ctx: Load,
                                },
                            ),
                        },
                    ),
                },
            ),
            Assign(
                StmtAssign {
                    node_index: NodeIndex(None),
                    range: 29..36,
                    targets: [
                        Name(
                            ExprName {
                                node_index: NodeIndex(None),
                                range: 29..30,
                                id: Name("X"),
                                ctx: Store,
                            },
                        ),
                    ],
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 33..36,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | a: type X = int
  |         ^ Syntax Error: Simple statements must be separated by newlines or semicolons
2 | lambda: type X = int
  |


  |
1 | a: type X = int
2 | lambda: type X = int
  |              ^ Syntax Error: Simple statements must be separated by newlines or semicolons
